# Stock_Analyzer

./: pyproject.toml
src/demo_crewai/: custom_tool.py  demo.py  main.py
src/demo_crewai/config/: tasks.yaml
v1/: README.md  report.md
v1/src/demo_crewai/: crew.py
v1/src/demo_crewai/config/: agents.yaml
v2/: README.md  pyproject.toml
v2/src/stockanalysis/: crew.py  demo.py  main.py
v2/src/stockanalysis/config/: agents.yaml  tasks.yaml
v2/src/stockanalysis/tools/: custom_tool.py
