[project]
name = "demo_crewai"
version = "0.1.0"
description = "demo_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "yfinance",
    "streamlit"
]

[project.scripts]
demo_crewai = "demo_crewai.main:run"
run_crew = "demo_crewai.main:run"
train = "demo_crewai.main:train"
replay = "demo_crewai.main:replay"
test = "demo_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
